version/0.13/_sources/index.rst.txt
PyEDB documentation |version|
=============================

PyEDB is a Python library that interacts directly with the `PyEDB-Core <https://github.com/ansys/pyedb-core>`_
API to make scripting simpler.

.. grid:: 2

    .. grid-item-card:: Getting started :fa:`person-running`
        :padding: 2 2 2 2
        :link: getting_started/index
        :link-type: doc

        Learn more about PyEDB and how to install and use it. Also view
        important version, interface, and troubleshooting information.

    .. grid-item-card:: User guide :fa:`book-open-reader`
        :padding: 2 2 2 2
        :link: user_guide/index
        :link-type: doc

        Understand how to use PyEDB by looking at some simple tutorials.

    .. grid-item-card:: API reference :fa:`book-bookmark`
        :padding: 2 2 2 2
        :link: api/index
        :link-type: doc

        Understand PyEDB API endpoints, their capabilities,
        and how to interact with them programmatically.

    .. grid-item-card:: Examples :fa:`scroll`
        :padding: 2 2 2 2
        :link: examples
        :link-type: doc

        Explore examples that show how to use PyEDB to
        perform many different types of simulations.


    .. grid-item-card:: Contribute :fa:`people-group`
        :padding: 2 2 2 2
        :link: getting_started/contributing
        :link-type: doc

        Learn how to contribute to the PyEDB codebase or documentation.

.. toctree::
   :hidden:

   getting_started/index
   user_guide/index
   api/index
   examples/index
   contributing

Indices and tables
==================
* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
